<resources>
    <string name="app_name">Семенов.Погода</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Семенов.Погода</string>
    <string name="nav_header_subtitle">0770407@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Настройки</string>
    <string name="menu_slideshow">Помощь</string>

    <string name="home_second">Home Second</string>
    <string name="region">London, GB</string>
    <string name="button_change_town">выбрать</string>
    <string name="button_options_select_title">настройки</string>
    <string name="desc">desc</string>
    <string name="pressure_data"></string>
    <string name="temperature_data">0</string>
    <string name="wind_data"></string>
    <string name="button_back">ок</string>
    <string name="button_help">помощь</string>
    <string name="town_edit_text_hint">Ввод города</string>
    <string name="checkbox_wind_title">скорость ветра</string>
    <string name="checkbox_pressure_title">давление</string>
    <string name="button_go_url">посмотреть на яндекс</string>

    <string name="yandex_link">https://yandex.ru/pogoda/</string>
    <string name="place_not_found">Город не найден</string>

    <!--    Символы погоды-->
    <string name="change_city">Выбор города</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="z_thunder_white">&#xf01c;</string>

    <!--    Alert dialog окно-->
    <string name="exclamation">Не могу понять какой город Вы ввели</string>
    <string name="press_button">Город не найден</string>
    <string name="button">OK</string>
    <string name="network_error">Нет сети!</string>
    <string name="alert_title_no_town">Город не выбран</string>
    <string name="alert_msg_input_town">Введите название города</string>
    <string name="add">add</string>
    <string name="update">update</string>
    <string name="remove">remove</string>
    <string name="clear">clear all</string>
    <string name="element_number">номер эл-та</string>

    <string name="pressure_units">мм рт.ст.</string>
    <string name="wind_units">м/с</string>
    <string name="button_ok">Готово</string>
    <string name="town_is_entered">Введен город: %s</string>
    <string name="key_is_pressed">Кнопка нажата</string>

    <string name="title_activity_maps">Map</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="btn_title_me">я</string>

</resources>
