<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.geekbrains.android2.semenovweather.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_options"
            app:destination="@id/nav_options" />
    </fragment>

    <fragment
        android:id="@+id/nav_options"
        android:name="ru.geekbrains.android2.semenovweather.ui.selectoptions.SelectOptionsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_options" >
        <argument
            android:name="args"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_options_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_options_to_nav_help"
            app:destination="@id/nav_help" />
    </fragment>

    <fragment
        android:id="@+id/nav_help"
        android:name="ru.geekbrains.android2.semenovweather.ui.help.helpFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_help" />
</navigation>