<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/townTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/region"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/changeTownBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <!--    кнопка временно на реконструкции (пока не подключил переключение между фрагментами в Drawer) -->
<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/goOptionsSelectActivityBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="236dp"-->
<!--        android:layout_marginEnd="28dp"-->
<!--        android:text="@string/button_options_select_title"-->
<!--        android:textSize="12sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeTownBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="6dp"
        android:text="@string/button_change_town"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/myLocation"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myLocation"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="12dp"
        android:text="@string/btn_title_me"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/skyImageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/townTextView"
        app:srcCompat="@drawable/z_cloud_few_white" />

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/pressure_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/temperatureTextView" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:text="@string/temperature_data"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/skyImageView"
        app:layout_constraintEnd_toStartOf="@+id/skyImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/skyImageView" />

    <TextView
        android:id="@+id/windTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/wind_data"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/temperatureTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/lastUpdateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skyImageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewDays"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/lastUpdateTextView"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:src="@drawable/line"
        app:layout_constraintBottom_toTopOf="@+id/textDisigned"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textDisigned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Illustrated by Akemi "
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>